src/syntax_analysis/expression/tests/snapshots/monkey_interpreter__syntax_analysis__expression__tests__test_syntax_analysis_for_boolean_expression_case2.snap
---
source: src/syntax_analysis/expression/tests/mod.rs
expression: "crate::syntax_analysis::get_abstract_syntax_tree(crate::lexical_analysis::LexicalAnalysis::from(code))"

---
AbstractSyntaxTree {
    abstract_syntax_tree: [
        Expression {
            expression: Boolean {
                boolean_token: False,
            },
        },
    ],
    syntax_parsing_errors: [],
}
