src/syntax_analysis/expression/tests/snapshots/monkey_interpreter__syntax_analysis__expression__tests__test_syntax_analysis_for_boolean_expressions_case1.snap
---
source: src/syntax_analysis/expression/tests/mod.rs
expression: "crate::syntax_analysis::SyntaxAnalysis::from(crate::lexical_analysis::LexicalAnalysis::from(code).unwrap())"
---
Ok(
    [
        Expression {
            expression: Boolean {
                boolean: True,
            },
        },
    ],
)
